--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
+node_modules
+.DS_Store
+*.local
 *.swp
 *.swo
-*.svg
 wmlog
 log
 TAGS
 tags
 /#*
-
-# These are used as thumbnails in the /parlitest.php webpage
-!images/CumhuriyetMeclisiDagilim.svg
-!images/New_Zealand-01.svg
-!images/Senate_diagram_2014_State_of_Utah.svg
-
