--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.3.0",
+    "@vitejs/plugin-vue": "^1.10.2",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.3.1",
     "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.7",
-    "vite": "^2.9.13"
+    "tailwindcss": "^3.4.3",
+    "vite": "^2.9.18"
   },
   "repository": "github:jamesm2w/parliamentdiagram",
   "license": "GPL-2.0-or-later"
